# ml_project

./: .gitignore  .pre-commit-config.yaml  LICENSE  ML-project.ipynb  MLproject  Makefile  Optuna.ipynb  README.md  config.yml  ml_project-mlruns.db  ml_project-mlruns.db.bkp  mlflow_runs.sqlite3.bkp  pyproject.toml  python_env.yaml  requirements.txt  todo.txt
conf/: logging.json  logging.yml
conf/base/: apartments_all_columns.yml  apartments_selected_columns_geo_param.yml  optuna-config.yml
conf/env/: env.example  env_docker_local  env_docker_local_template  env_docker_test  env_docker_test_template  env_local.sh  env_test.sh  local.sh  postgres_init.sh  run_local.sh  secrets_local  secrets_test
data/: apartments.csv
data/.dvc/: config
data/01_raw/apartments/: apartments.csv.zip.dvc
data/05_model_input/: apartments.csv  apartments_old.csv
docker/: docker-compose.yml
docs/: exemplary_datapoints.txt  prezentacja.pptx
docs/evaluation/: data_drift.html  regression_quality_report.html  regression_quality_test.html
docs/source/: conf.py  index.rst
mlartifacts/0/0347e7d6295a4ba09da8e35b0cdb5410/artifacts/: optimization_history.html  param_importances.html
mlartifacts/0/068f22ffa11f4d40b6bc16c4fcdfefd7/artifacts/: optimization_history.html  param_importances.html
notebooks/: Optuna.ipynb  apartments_eda.ipynb  config.yml
notebooks/utils/: PCA_Transformer.py  ml.py  utils.py
src/: app.py  etl_data.py  optuna_study.py
src/lib/: utils.py
src/lib/optuna/: algos.py  columns.py  encoders.py  imputers.py  objective.py  pipeline.py  scalers.py
src/ml_project/: __init__.py  __main__.py
src/mlproject/: __init__.py  __main__.py  app.py  cli.py  etl_data.py
src/mlproject/optunasetup/: objective.py  pipeline.py
tests/: test_run.py
tests/integration_tests/: run_test.sh  test_model.py
tests/integration_tests/data/: apartments.csv  apartments_1.csv
tests/integration_tests/docker/: docker-compose_tests.yml
tests/unittests/: test_optuna.py
utils/: PCA_Transformer.py  ml.py  utils.py
(+245 files in other folders)
