[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlproject"
authors = [{name = "Piotr Szelemej"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
version = "0.1.0"
dynamic = ["description"]

[project.scripts]
experiment = "mlproject.cli:main"

[tool.pytest.ini_options]
addopts = """
--ignore=docker/storage-local
--ignore=tests/integration_tests"""

[tool.ruff]
line-length = 120
select = [
    "ALL", # include all the rules, including new ones
]