[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlproject"
authors = [{name = "Piotr Szelemej"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
version = "0.1.0"
dynamic = ["description"]

[project.scripts]
experiment = "mlproject.cli:main"

[tool.pytest.ini_options]
addopts = """
--ignore=docker/storage-local
--ignore=tests/integration_tests"""

[tool.ruff]
line-length = 120
select = [
    "ALL", # include all the rules, including new ones
]
ignore = [
    "ANN001",
    "ANN201",
    "N806",
    "T201",
    "D100",
    "ANN101","ANN204","ARG001","ARG002","ARG005","B904","BLE001","C408","C416","D101","D102","D103","D104","D107","D200","D205","D401","D417","DTZ005","E501","E712","E722","E731","EM102","ERA001","F841","FBT002","FBT003","INP001","N801","N803","N815","N818","PD002","PD011","PD901","PERF203","PLR0913","PLR2004","PLW0603","PLW1508","PT006","PTH100","PTH123","RET504","RET505","RSE102","RUF013","RUF015","S110","S301","SIM105","SIM210","TCH002","TRY002","TRY003","TRY200","UP007",
]

[tool.ruff.lint.per-file-ignores]
"tests/unittests/*.py" = ["S101", "D103"]
"notebooks/*" = ["C403","N816"]

[tool.ruff.lint.pep8-naming]
ignore-names = ["X", "X_train", "X_test", "X_val", "pc_X_train", "pc_X_test"]
